# fundamenta-savvy-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MAPPERS_USAGE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 04608cf2f87e_change_economic_calendar_event_date_to_.py  12282951cc02_remove_country_and_period_from_.py  42a68bdd9bbd_create_news_models.py  43a939f4a0b6_fmp_models.py  44efcfd777b8_make_quote_symbol_timestamp_index_unique.py  4a2498c2fd9e_initial_migration.py  51e63c9c0d65_change_economiccalendarevent_date_from_.py  620425ab82b6_add_company_metrics_table2.py  82d16e216c47_update_fields_in_stocksymbol.py  83a7bd2eea7d_add_unique_constraint_to_economic_.py  898485f13588_add_unique_constraint_to_.py  908032d39437_rename_ev_fcf_ratio_column_in_company_.py  9b4ce49be5a6_convert_all_date_string_fields_to_date_.py  ba14749a0159_change_economicindicator_date_from_.py  ca11bd909394_change_stock_symbol_primary_key.py  cc6360836fc6_create_company_metrics_model.py  (+3 more)
app/: main.py
scripts/: README.md  __init__.py  base.py  config.py  example.py  sync_balance_sheets.py  sync_cash_flow_statements.py  sync_company_metrics.py  sync_company_profiles.py  sync_dividend_calendar_by_date.py  sync_dividends.py  sync_earnings_calendar.py  sync_economic_calendar.py  sync_economic_indicators.py  sync_financial_statement_symbols.py  sync_historical_prices.py  sync_income_statements.py  sync_industries.py  sync_news.py  sync_quotes.py  sync_sector_performance.py  sync_sectors.py  sync_stock_list.py  utils.py
(+47 files in other folders)
